# jmart-steel-safety-app

./: .env.example  .eslintignore  .eslintrc.json  .firebaserc  .fuse_hidden0000000400000001  .fuse_hidden0000000500000002  .fuse_hidden000000e200000001  .gitattributes  .gitignore  AUDIT-REPORT.md  AUDIT-SAFETY-SYNC.md  CLAUDE.md  CRITICAL-SAFETY-REVIEW.md  DOCUMENTATION.md  HUB-AUDIT-REPORT.md  README.md  SAFETY_APP_RUNBOOK.md  SECURITY.md  TEST-COVERAGE-ANALYSIS.md  artsteel-hub.html  firebase.json  firebase.rules.json  generate-sri-hashes.sh  health-check-2026-03-26.md  health-check-2026-03-27.md  health-check-2026-03-30.md  hub-manifest.json  hub-sw.js  index.html  jest.config.js  jmart-safety-app.html  manifest.json  offline.html  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  reset.html  steel-app.html  (+1 more)
.firebase/: hosting..cache
android/: index.html  offline.html  sw.js
docs/: AGENT_SYSTEM.md
functions/: index.js  package-lock.json  package.json
hub/: __init__.py  config.py  main.py  registry.py
hub-runtime/: artsteel-hub.html  hub-manifest.json  hub-reset.html  hub-sw.js
ios/: index.html  manifest.json  offline.html  sw.js
js/: app-core.js  app-views.js  app.js  auditLogManager.js  config.js  dailyBackupScheduler.js  dataExport.js  deviceAuth.js  deviceAuthManager.js  errorTelemetry.js  firebaseSync.js  formAssetStore.js  formConstants.js  formValidator.js  googleDriveConfig.js  googleDriveSync.js  intervalRegistry.js  jobsManager.js  networkStatus.js  offlinePhotoQueue.js  pdfConfig.js  pdfGenerator.js  (+7 more)
(+194 files in other folders)
